# opencv-fpga

./: README.md
Hersh_docs/: ADAS_ML.txt  Altera_fpga_programming_guide.txt  Compiling_FPGA_OpenCL_kernel.txt  FPGA reprogram firmware notes.txt  FPGA_convolve_kernel_example.cl
builds/: CMakeCache.txt
modules/core/: CMakeLists.txt
modules/core/include/opencv2/core/: ocl.hpp
modules/core/src/: ocl.cpp  opencl.h  options.cpp  umatrix.cpp
modules/fpga/: CMakeLists.txt
modules/fpga/include/AOCL/: cl.h  cl.hpp  cl_d3d10.h  cl_ext.h  cl_gl.h  cl_gl_ext.h  cl_platform.h  opencl.h
modules/fpga/include/opencv2/: fpga.hpp
modules/fpga/include/opencv2/fpga/: affine.hpp  base.hpp  core.hpp  core_c.h  cuda.hpp  cuda.inl.hpp  cuda_stream_accessor.hpp  cvdef.h  cvstd.hpp  directx.hpp  eigen.hpp  fast_math.hpp  ippasync.hpp  mat.hpp  matx.hpp  neon_utils.hpp  ocl.hpp  ocl_genbase.hpp  opengl.hpp  optim.hpp  persistence.hpp  private.cuda.hpp  private.hpp  saturate.hpp  sse_utils.hpp  traits.hpp  types.hpp  types_c.h  utility.hpp  va_intel.hpp  wimage.hpp
modules/fpga/include/opencv2/fpga/cuda/: common.hpp  scan.hpp
modules/fpga/include/opencv2/fpga/hal/: hal.hpp  intrin.hpp  intrin_cpp.hpp  intrin_neon.hpp  intrin_sse.hpp
modules/fpga/include/opencv2/fpga/opencl/: ocl_defs.hpp  opencl_svm.hpp
modules/fpga/include/opencv2/fpga/opencl/runtime/: opencl_core.hpp  opencl_gl.hpp
modules/fpga/include/opencv2/fpga/opencl/runtime/autogenerated/: opencl_core.hpp  opencl_gl.hpp
modules/fpga/src/: aocl_utils.h  hal_replacement.hpp  ocl.cpp  opencl.cpp  precomp.hpp
modules/imgproc/src/: filter.cpp  smooth.cpp
